updated userAddress, added phone number to each address
